fix side-playlist on mobile

--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -1,22 +1,10 @@
 .media {
     display: flex;
     align-items: center;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border-radius: 4px;
-    
-    &-current {
-        background-color: $primary;
-        color: $white;
 
-        & .media__title, & .media__subtitle {
-            color: $white;
-        }
-
-        & .media-play-btn {
-            display: flex;
-        }
-    }
-    &--active, &--active-primary {
+    &--active {
         & .media-play-btn {
             display: flex;
             &__icon {
@@ -101,6 +89,8 @@
     &--previous {
         opacity: 0.5;
     }
+
+    
 
     &--cd {
         & .media-cover {
