--- a/src/sass/layout/_sideplaylist.scss
+++ b/src/sass/layout/_sideplaylist.scss
@@ -11,6 +11,10 @@
 
     &--open {
         transform: translateX(0%);
+
+        @media screen and (max-width: $smallBreakpoint) {
+            transform: translateX(calc(100% + 10px));
+        }
     }
 
 }
@@ -93,7 +97,38 @@
     }
 
 
-    
+    &-current .media {
+        &.playing {
+            & .media-play-btn {
+                &__icon {
+                    &--play {
+                        display: block;
+                    }
+                    &--pause {
+                        display: none;
+                    }
+                }
+            }
+        }
+
+        
+
+        & .media__title, & .media__subtitle {
+            color: $white;
+        }
+
+        & .media-play-btn {
+            display: flex;
+            &__icon {
+                &--play {
+                    display: none;
+                }
+                &--pause {
+                    display: block;
+                }
+            }
+        }
+    }
     
 
 }
